src/test/resources/AttributeCheck/positive/LanguageSpecification2.ls
class A {

  syn a1 : int;
  inh a2 : int;

  p ("") {
    this.a1 = 13;
  }

}
