src/test/resources/AttributeCheck/negative/WrongAttributeDefinitionThis.ls
class A {

  inh a : int;

  p ("") {
    this.a = 13;
  }

}
